# DART_python

./: .gitattributes  .gitignore  2d_projections_test.ipynb  3d_projections_test.ipynb  README.md  TODO.txt  angle_visualization.ipynb  config_exps.py  dart_steps_test.ipynb  dart_test.ipynb  experiments.py  generate_foam.py  generate_phantom.py  notes.txt  phantoms.ipynb  phantoms_ele.ipynb  poisson_visualization.ipynb  projection_and_angles_exps.py  projections_visualization.ipynb  pyproject.toml  requirements.txt  results_visualization.ipynb  run_exps.sh  setup.py  show_phantom.py  test.ipynb  test.py  test_mask.ipynb  test_paws.ipynb
DART/: DART.py
dataset/test/: proj0000.tif  proj0001.tif  proj0002.tif  proj0003.tif  proj0004.tif  proj0005.tif  proj0006.tif  proj0007.tif  proj0008.tif  proj0009.tif  proj0010.tif  (+169 more)
experiment_scripts/: exp.sh  gray_values_exp.py  p_fix_exps.py  poisson_noise_exp.py  proj_ang_comb.py  projection_and_angles_exps.py
notebook_examples/: angle_range.ipynb  angle_visualization.ipynb  dart_steps_test.ipynb  gray_levels_rand.ipynb  low_ang.ipynb  low_projections.ipynb  p_fixed_10proj.ipynb  p_fixed_50proj.ipynb  param_tuning.ipynb  poisson_visualization.ipynb  projections_visualization.ipynb
src/: algorithms.py  algs.py  phantom_creator.py  phantoms.py  projections.py  utils.py
visualizations/: angle_visualization.ipynb  comb_proj_ang.ipynb  gray_levels_rand.ipynb  gray_overestimate.ipynb  gray_underestimate.ipynb  p_fixed_10proj.ipynb  p_fixed_50proj.ipynb  phantoms.ipynb  poisson_visualization.ipynb  projections_visualization.ipynb
(+753 files in other folders)
